tests/ui/impl-trait/impl-fn-predefined-lifetimes.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/impl-fn-predefined-lifetimes.rs:4:35
   |
LL | fn a<'a>() -> impl Fn(&'a u8) -> (impl Debug + '_) {
   |                                   ^^^^^^^^^^^^^^^ cannot resolve opaque type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0720`.
